--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,9 @@
         @apply font-[Raleway];
     }
     li {
-        @apply px-4;
+        @apply px-3;
         @apply cursor-pointer
+        
     }
 }
 
@@ -19,6 +20,7 @@
     background-size: cover;
     background-position: center;
     height: 250px;
+    transition: background-image 20s ease-in-out;
 }
 
 .content-div:hover {
